# AdventOfCode

./: .gitignore  Cargo.toml  bacon.toml  rust-toolchain.toml
.cargo/: config.toml
aoc2025/: Cargo.toml
aoc2025/src/: error.rs  lib.rs  prelude.rs  tracing.rs
