[package]
name = "aoc2025"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dashmap = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
